# quanterra-pipeline

./: .dockerignore  .gitignore  Dockerfile  deployment.yaml  mypy.ini  prefect.yaml  pyproject.toml  ruff.toml
.github/workflows/: cli-deploy.yaml  deploy-prefect-dev.yaml  deploy-prefect-prod.yaml  deploy-prefect.yaml  deploy.yml  prefect-deploy.yml  test.yml
src/cli/: tool_update.py  upload_transactions.py
src/clients/: eodhd_client.py  google_cloud_storage_client.py  hargreaves_lansdown_client.py  interactive_investor_client.py  oanda_client.py  yahoo_finance_client.py
src/clients/abstract/: base_api_client.py  base_file_client.py
src/clients/api/: base_api_client.py  eodhd_client.py  oanda_client.py
src/clients/file/: abstract_file_client.py  base_csv_client.py  google_cloud_file_client.py
src/common/: config.py  json_utils.py  models.py  types.py
src/flows/: eodhd.py  hargreaves_lansdown.py  ingestion.py  interactive_investor.py  market_data.py  models.py  oanda.py  yahoo_finance.py
src/utils/: utilities.py
tests/cli/: test_tool_update.py
tests/e2e/: test_eodhd_flow.py  test_eodhd_runner.py  test_hargreaves_lansdown_flow.py  test_hargreaves_lansdown_script.py  test_interactive_investor_flow.py  test_interactive_investor_script.py  test_oanda_flow.py  test_oanda_script.py  test_upload_transactions_cli.py  test_yahoo_finance_flow.py  test_yahoo_finance_script.py
tests/prefect/: test_eodhd_flow.py  test_hargreaves_lansdown_flow.py  test_interactive_investor_flow.py  test_market_data_flow.py  test_oanda_flow.py  test_yahoo_finance_flow.py
(+99 files in other folders)
